# carbon

./: .editorconfig  .gitignore  Cargo.toml
.github/workflows/: rust.yml
projects/carbon-dump/: Cargo.toml  languages.dump  readme.md  themes.dump
projects/carbon-dump/languages/: Clojure.sublime-syntax  Elm Compile Messages.sublime-syntax  Elm Documentation.sublime-syntax  HTML.sublime-syntax  JavaDoc.sublime-syntax  Kotlin.sublime-syntax  Perforce Client Specification.sublime-syntax  Rust.sublime-syntax  TOML.sublime-syntax  Thrift.sublime-syntax  TypeScript.sublime-syntax  TypeScriptReact.sublime-syntax  starlark.sublime-syntax  wolfram.sublime-syntax
projects/carbon-dump/src/: lib.rs  sublime.rs  utils.rs
projects/carbon-dump/src/sublime/: mod.rs
projects/carbon-dump/themes/: nyx-bold.tmTheme
projects/carbon-lib/: Cargo.toml
projects/carbon-lib/src/: error.rs  highlight.rs  lib.rs
projects/carbon-lib/src/utils/: config.rs  html.rs  mod.rs  render.css
projects/carbon-rs/: Cargo.toml
projects/carbon-rs/src/: lib.rs  main.rs
projects/carbon-rs/src/utils/: config.rs  highlight.rs  mod.rs
