[package]
name = "carbon-dump"
version = "0.0.0"
authors = ["Finn <finn.bcd@gmail.com>"]
license = "CC0-1.0"
edition = "2018"

description = "Experimental Moss interpreter"
keywords = ["scripting", "language"]
homepage = "https://johnbsmith.github.io/moss/home.htm"
repository = "https://github.com/JohnBSmith/moss"


[dependencies]
syntect = "3.2"
lazy_static = "1.4.0"




