[package]
name = "carbon-dump"
version = "1.2.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/GalAster/carbon-rs"
readme = "README.md"
license = "MPL-2.0"
edition = "2018"
include = [
    "src/**/*",
    "Cargo.toml",
    "languages.dump",
    "themes.dump",
]


[dependencies]
syntect = "3.2"
lazy_static = "1.4.0"




