[package]
name = "carbon-dump"
version = "1.2.1"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/GalAster/carbon-rs"
readme = "README.md"
license = "MPL-2.0"
edition = "2018"
include = [
    "src/**/*",
    "Cargo.toml",
    "languages.dump",
    "themes.dump",
]


[dependencies]
lazy_static = "1.4"

[dependencies.syntect]
version = "4.4"
# default-features = false
# features = ["default-fancy"]


