[package]
name = "carbon-lib"
version = "0.3.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/nyar-lang/Notedown-rs"
readme = "README.md"
license = "MPL-2.0"
edition = "2018"

[dependencies]
lazy_static = "1.4"


[dependencies.syntect]
version = "4.4"
# default-features = false
# features = ["default-fancy"]


[dependencies.carbon-dump]
version = "1.2"
path = "../carbon-dump"